--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "@coreui/icons-react": "^2.3.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/material": "^6.1.0",
-    "antd": "^5.20.2",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "antd": "^5.21.0",
     "antd-img-crop": "^4.23.0",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
@@ -24,9 +24,10 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
